--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         onsubmit="event.preventDefault(); onLoginDetailsSubmit();"
         >
         <input
-        type="text"
+        type="email"
         id="email_address"
             class="input-field"
             name="email_address"
@@ -60,7 +60,7 @@
           <input
           id="email-create"
           name="email_address"
-          type="text"
+          type="email"
           class="input-field"
           placeholder="Enter email"
           required
